--- a/P8B7F05CA.opf/layers/v047/Pagination.yml
+++ b/P8B7F05CA.opf/layers/v047/Pagination.yml
@@ -1,33 +1,36 @@
-id: 91eca45b31504e43b967b6f7ae968d7a
+id: cc0c5a3188304d5eab7442111faf0a3a
 annotation_type: Pagination
 revision: '00001'
 annotations:
-  0f02d1321e0449d1857a0d0db860be63:
+  c92a261a570c4a1e8460ab87b615be25:
     imgnum: 242
     reference: ''
     span:
       start: 0
-      end: 893
-  77bf433b8eda436cb05a026d38a0091b:
+      end: 895
+    note_ref: 87ba5d77b0254d6d9863891c705ea386
+  cda7f7407f434f56af4038621a2a0607:
     imgnum: 243
     reference: ''
     span:
-      start: 896
-      end: 2464
-  a950489984174728b597336c233e5612:
+      start: 898
+      end: 2468
+    note_ref: 87ba5d77b0254d6d9863891c705ea386
+  20a61e7617994be38b68fd5914b64f42:
     imgnum: 244
     reference: ''
     span:
-      start: 2467
-      end: 3461
-  bac2ba566d7a49178ee7c0da2d25b9f6:
+      start: 2471
+      end: 3467
+    note_ref: 87ba5d77b0254d6d9863891c705ea386
+  87ba5d77b0254d6d9863891c705ea386:
     imgnum: 245
     reference: ''
     span:
-      start: 3464
-      end: 3888
+      start: 3470
+      end: 3861
 local_ids:
-  0f02d1321e0449d1857a0d0db860be63: 200000
-  77bf433b8eda436cb05a026d38a0091b: 200001
-  a950489984174728b597336c233e5612: 200002
-  bac2ba566d7a49178ee7c0da2d25b9f6: 200003
+  c92a261a570c4a1e8460ab87b615be25: 200000
+  cda7f7407f434f56af4038621a2a0607: 200001
+  20a61e7617994be38b68fd5914b64f42: 200002
+  87ba5d77b0254d6d9863891c705ea386: 200003
