--- a/P8B7F05CA.opf/meta.yml
+++ b/P8B7F05CA.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     b4dcb68e9125485ba6b4e7d55f68578f:
       base_file: v047.txt
       image_group_id: I1PD95892
-      title: ''
+      title: དམ་ཚིག་སྦས་པ།
       total_pages: 1464
       volume_number: 47
