--- a/D1B811567.opf/index.yml
+++ b/D1B811567.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   ca27466004634778ac90ed37d7e8a787:
     parts: {}
+    work_id: N3647
     span:
-    - vol: 47
+    - base: cedf
       start: 0
       end: 3835
-    work_id: N3647
